add styling to header and hero

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-      <p>header logo</p>
+      <a href="#hero" id="logo">Header Logo</a>
       <nav>
         <a href="">header link one</a>
         <a href="">header link two</a>
@@ -20,18 +21,21 @@
       </nav>
     </header>
     <main>
-      <section>
-        <h1>this website is awesome</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
-          numquam laudantium optio et molestiae impedit fugiat culpa velit,
-          repellendus inventore, dolor quam facere placeat rem, adipisci tempora
-          magnam neque libero quod repellat ducimus illo natus nam cupiditate.
-          Sit nisi quam soluta ea, magnam ducimus, labore incidunt iste, nobis
-          similique sequi?
-        </p>
-        <button>sign up</button>
-        <img src="TODO" alt="TODO" />
+      <section id="hero">
+        <div id="hero--left">
+          <h1>This website is awesome</h1>
+          <p>
+            This website has some subtext that goes here under the main title.
+            It's a smaller font and the color is lower contrast
+          </p>
+          <button>Sign up</button>
+        </div>
+        <img
+          src="https://www.gstatic.com/images/icons/material/apps/fonts/1x/catalog/v5/heroes/noto-bg-dark.jpg"
+          alt="abstract image with no meaning"
+          width="300"
+          height="100"
+        />
       </section>
       <section>
         <h2>Some random information</h2>
