--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="base.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-      <a href="#hero" id="logo">Header Logo</a>
+      <a class="text-label" href="#hero" id="logo">Header Logo</a>
       <nav>
         <a href="">header link one</a>
         <a href="">header link two</a>
@@ -23,8 +24,8 @@
     <main>
       <section id="hero">
         <div id="hero--left">
-          <h1>This website is awesome</h1>
-          <p>
+          <h1 class="text-primary">This website is awesome</h1>
+          <p class="text-secondary">
             This website has some subtext that goes here under the main title.
             It's a smaller font and the color is lower contrast
           </p>
