style the second (list) section

--- a/index.html
+++ b/index.html
@@ -38,24 +38,42 @@
           height="100"
         />
       </section>
-      <section>
-        <h2>Some random information</h2>
-        <figure>
-          <img src="TODO" alt="TODO" />
-          <figcaption>this is some subtext</figcaption>
-        </figure>
-        <figure>
-          <img src="TODO" alt="TODO" />
-          <figcaption>this is some subtext</figcaption>
-        </figure>
-        <figure>
-          <img src="TODO" alt="TODO" />
-          <figcaption>this is some subtext</figcaption>
-        </figure>
-        <figure>
-          <img src="TODO" alt="TODO" />
-          <figcaption>this is some subtext</figcaption>
-        </figure>
+      <section id="list">
+        <h2 class="text-primary--variation">Some random information.</h2>
+        <ul>
+          <li>
+            <figure>
+              <img src="./images/squirrel.svg" alt="an icon of squirrel" />
+              <figcaption>
+                this is some subtext under an illustration or image
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img src="./images/squirrel.svg" alt="an icon of squirrel" />
+              <figcaption>
+                this is some subtext under an illustration or image
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img src="./images/squirrel.svg" alt="an icon of squirrel" />
+              <figcaption>
+                this is some subtext under an illustration or image
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img src="./images/squirrel.svg" alt="an icon of squirrel" />
+              <figcaption>
+                this is some subtext under an illustration or image
+              </figcaption>
+            </figure>
+          </li>
+        </ul>
       </section>
       <section>
         <blockquote>
