style the third (quote) section

--- a/index.html
+++ b/index.html
@@ -75,15 +75,12 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section id="quote">
         <blockquote>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
             Necessitatibus, nemo ad adipisci enim ullam quas? Ullam ab optio est
-            dolores iure? Odio iste obcaecati omnis! Iste omnis at expedita
-            dolorum et nobis ipsam odit voluptatum odio. Ipsam ratione natus
-            porro minima corrupti labore? Asperiores ipsum saepe distinctio
-            blanditiis libero est.
+            dolores iure? Odio iste obcaecati omnis!
           </p>
           <footer>-Thor, <cite>God of Thunder</cite></footer>
         </blockquote>
