--- a/index.html
+++ b/index.html
@@ -85,9 +85,13 @@
           <footer>-Thor, <cite>God of Thunder</cite></footer>
         </blockquote>
       </section>
-      <section>
-        <h2>Call to action! It's time!</h2>
-        <p>Sign up for our product by clicking the button right over there!</p>
+      <section id="sign-up">
+        <div id="sign-up--left">
+          <h2>Call to action! It's time!</h2>
+          <p>
+            Sign up for our product by clicking the button right over there!
+          </p>
+        </div>
         <button>Sign up</button>
       </section>
     </main>
